--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,12 +1,21 @@
+@use "../styles/breakpoints.scss" as bp;
+
 .main {
   margin-top: 6rem;
   margin-bottom: 6rem;
   max-width: 1100px;
   margin-inline: auto;
-  padding-inline: 1rem;
+  padding-inline: 3rem;
   h2 {
     font-size: 4rem;
     margin-bottom: 2rem;
+  }
+  @include bp.md {
+    padding-inline: 2rem;
+    margin-top: 4rem;
+    h2 {
+      font-size: 3rem;
+    }
   }
 }
 .clamp {
@@ -19,6 +28,9 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  @include bp.md {
+    gap: 4rem;
+  }
 }
 .article__right {
   display: flex;
@@ -27,12 +39,21 @@
   > p {
     line-height: 1.4;
   }
+  @include bp.md {
+    gap: 2rem;
+  }
 }
 .article__title {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
   align-items: center;
+  @include bp.lg {
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
+  }
+
   h4 {
     max-width: 500px;
     font-size: 1.5rem;
@@ -51,10 +72,18 @@
   img {
     border-radius: 1rem;
   }
+
+  @include bp.md {
+    flex-direction: column;
+
+    img {
+      width: auto;
+    }
+  }
 }
 .pagination {
   display: flex;
-  width: 500px;
+
   margin-inline: auto;
   align-items: center;
   gap: 2rem;
