--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -1,4 +1,6 @@
 @use "../styles/variables.scss";
+@use "../styles/breakpoints.scss" as bp;
+
 .hero {
   border-radius: 0rem 0rem 0.5rem 0.5rem;
   margin: 0 2rem 2rem 2rem;
@@ -10,8 +12,36 @@
   padding-inline: 16rem;
   flex-direction: column;
   gap: 1rem;
-
   h1 {
     font-size: 3rem;
+    line-height: 1.2;
+  }
+  @include bp.lg {
+    padding-inline: 8rem;
+    h1 {
+      font-size: 2.7rem;
+    }
+  }
+
+  @include bp.md {
+    margin: 0 1rem 1rem 1rem;
+    padding-inline: 4rem;
+    padding-block: 6rem;
+  }
+
+  @include bp.sm {
+    padding-inline: 2rem;
+    padding-block: 3rem;
+    h1 {
+      font-size: 2rem;
+    }
+  }
+
+  @include bp.breakpoint(320px) {
+    padding-inline: 2rem;
+    padding-block: 4rem;
+    h1 {
+      font-size: 1.5rem;
+    }
   }
 }
