--- a/components/hero.module.scss
+++ b/components/hero.module.scss
@@ -38,10 +38,33 @@
   }
 
   @include bp.breakpoint(320px) {
-    padding-inline: 2rem;
     padding-block: 4rem;
     h1 {
       font-size: 1.5rem;
+    }
+  }
+}
+
+.image {
+  max-width: calc(100% - 4rem);
+  display: flex;
+  justify-content: center;
+  margin-inline: auto;
+  margin-top: -4rem;
+  img {
+    display: none;
+  }
+
+  @include bp.md {
+    max-width: calc(100% - 2rem);
+    margin-top: -1.5rem;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 0 0 1rem 1rem;
     }
   }
 }
