--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,4 +1,5 @@
 @use "../styles/breakpoints.scss" as bp;
+@use "../styles/variables.scss";
 
 .main {
   margin-top: 6rem;
@@ -46,8 +47,9 @@
 .article__title {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   gap: 1rem;
-  align-items: center;
+  align-items: left;
   @include bp.lg {
     flex-direction: column;
     justify-content: left;
@@ -96,4 +98,18 @@
 
   border: 1px solid purple;
   border-radius: 0.4rem;
+}
+
+.tags {
+  border: 1px solid purple;
+  border-radius: 0.5rem;
+  display: inline-block;
+  width: fit-content;
+  padding: 0.4rem;
+  transition: all ease 100ms;
+  cursor: pointer;
+  &:hover {
+    background-color: rgba(purple, $alpha: 0.8);
+    color: white;
+  }
 }
