--- a/app/[slug]/page.module.scss
+++ b/app/[slug]/page.module.scss
@@ -20,6 +20,48 @@
   }
 }
 
+.toc {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  max-width: 300px;
+  background-color: aliceblue;
+  padding: 2rem 1rem 2rem 2rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.toc__div {
+  position: fixed;
+  left: 1rem;
+  bottom: 4rem;
+  transform: scaleY(0) scaleX(0);
+  transition: all ease 500ms;
+  transform-origin: bottom left;
+  z-index: 10;
+
+  &.active {
+    transform: scaleY(1) scaleX(1);
+  }
+}
+
+.button {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  padding-inline: 1rem;
+
+  left: 1rem;
+  bottom: 1rem;
+  width: max-content;
+  height: 2rem;
+  border-radius: 1rem;
+  background-color: aliceblue;
+}
+
 .h2 {
   font-size: 2rem;
   margin-top: 1rem;
@@ -34,6 +76,10 @@
 
   @include bp.sm {
     border-radius: unset;
+  }
+  @include bp.breakpoint(1200px) {
+    width: 100%;
+    margin-left: 0;
   }
 }
 
