feat: added tag system to the posts

--- a/app/[slug]/page.module.scss
+++ b/app/[slug]/page.module.scss
@@ -96,11 +96,11 @@
 }
 
 .ul {
-  list-style-type: circle;
+  list-style-type: none;
 }
 
 .ol {
-  list-style-type: decimal;
+  list-style-type: none;
 }
 
 .li {
