--- a/app/[slug]/page.module.scss
+++ b/app/[slug]/page.module.scss
@@ -9,7 +9,7 @@
 
 .paragraph {
   margin-block: 2rem;
-  line-height: 1.3;
+  line-height: 1.5;
   & > code {
     background-color: rgba(0, 0, 0, 0.581);
     color: white;
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .toc__div {
@@ -60,6 +61,7 @@
   height: 2rem;
   border-radius: 1rem;
   background-color: aliceblue;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .h2 {
@@ -96,7 +98,8 @@
 }
 
 .ul {
-  list-style-type: none;
+  list-style: decimal;
+  margin-bottom: 2rem;
 }
 
 .ol {
